Bug 1317642 Disable WeakPtr thread assertions on MinGW r=froydnj

MinGW has two threading models: win32 API based, which disables std::thread,
and POSIX based which enables it but requires an emulation library (winpthreads).

Rather than attempting to switch to pthread emulation at this point, we are
disabling the std::thread based assertion checking for WeakPtr on MinGW.

MozReview-Commit-ID: BmHo70n6AuK

--HG--
extra : rebase_source : 08495775b2925a797c8098216911d30c0b79ef3d